4. Carpentry skills list underwent a little makeover.
5. I3 LISTEN/SILENCE can be used by i3 admins to test out other channels... if you turn one on, be sure to turn it off before you leave!
6. (internal) XMLManager optomized for More Speed!
7. Missing INI entry (WRNMSGS) now added and documented.
8. New Property (Prop_RoomList) -- more lightweight way to keep rooms from going dark at night (pun intended).
9. New Skills: Urban Tactics, Pressure Points
10.New Clan Trophies: Most Members, and Highest Median Member Level
11.Pregnancy will fail if either participant is exhausted or below 1/2 movement.  A message was added so the players know.
12.Arcanists can LOOK at wand charges at level 30.
13.Common Skills now support "STOP" to cancel.
14.Troll regeneration moved from the MOB to the Race
15.InstantDeath behavior now allows a zappermask, also New Property (Prop_InstantDeath) -- more lightweight than the behavior.
16.New race: Slime, and racial category to go with it
17.New spells: Acid Spray, Mass Hold
18.Some common skills can now be done sitting done.
19.Bandaging also restores a few hit points.
20.CombatAbilities and its derivatives (Bardness/Clericness/etc..) will adjust base char stats of mobs to reflect class, unless NOSTATS in the parms.
21.Players Teaching Players is now more beneficial for both.  Also, (internally), Teach is now StdMOB managed, as it should be.
22.Potions/Pills/Scrolls/Powders now support parameters for spells on them.
23.Scriptable: get_prog now applies to getting items from containers on the ground.
24.Druids can now shapeshift into lower versions of their existing shapeshift forms.
25.Char Creation Stat picker now has Random Roll option.
26.POSE can now be turned off with NOPOSE
27.The POLL system now supports 1 vote per account for those using the account system.
28.Prop_TrashCan supports a DELAY parameter
29.New formulas for PVP combat -- INI/Control Panel support.  The defaults basically remove level fudging.